--- a/rclone/service_systemd/rclone.service
+++ b/rclone/service_systemd/rclone.service
@@ -1,3 +1,4 @@
+# Place in /etc/systemd/system/rclone.service
 [Unit]
 Description=Rclone Service
 Wants=network-online.target
@@ -5,21 +6,27 @@ After=network-online.target
  
 [Service]
 Type=notify
-Environment=RCLONE_CONFIG=/home/USER/.config/rclone/rclone.conf
- 
+User=1000 # Your user ID
+Group=1000 # Your group ID
+
+# Rclone Arguments
 ExecStart=/usr/bin/rclone mount \
---log-level INFO \
+--uid=997 --gid=997 --umask=002 \
+--log-level ERROR \
+--poll-interval 15s \
 --allow-other \
---buffer-size 64M \
---dir-cache-time 720h \
---drive-chunk-size 128M \
+--dir-cache-time 1000h \
+--buffer-size 256M \
+--drive-chunk-size 512M \
 --vfs-read-chunk-size 128M \
 --vfs-read-chunk-size-limit off \
 --vfs-cache-mode writes \
-YOUR_GOOGLE_DRIVE_REMOTE: /mnt/appdata/rclonedata/rclone_mount
+YOUR_GOOGLE_DRIVE_REMOTE: /mnt/appdata/rclonedata/rclone_mount # Enter your Rclone remote and location of Rclone mount
 
-ExecStop=/usr/bin/fusermount -uz /mnt/appdata/rclonedata/rclone_mount
+ExecStop=/usr/bin/fusermount -uz /mnt/appdata/rclonedata/rclone_mount # Rclone mount location
 Restart=on-failure
+RestartSec=10
+KillMode=none
  
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
