--- a/rclone/service_systemd/mergerfs.service
+++ b/rclone/service_systemd/mergerfs.service
@@ -3,18 +3,15 @@
 Description=Mergerfs Service
 Requires=rclone.service
 After=rclone.service
-RequiresMountsFor=/mnt/gdrive
+RequiresMountsFor=/mnt/rclonedata/rclone_upload
 RequiresMountsFor=/mnt/rclonedata/rclone_mount
  
 [Service]
 Type=forking
-
-# Mergerfs mount arguments
-ExecStart=/usr/bin/mergerfs /mnt/rclonedata/rclone_upload:/mnt/rclonedata/rclone_mount /mnt/media \ # Enter your Rclone upload/mount folders and Mergerfs mount folder
--o rw,async_read=false,use_ino,allow_other,func.getattr=newest,category.action=all,category.create=ff,cache.files=off
-
+ExecStart=/usr/bin/mergerfs /mnt/rclonedata/rclone_upload:/mnt/rclonedata/rclone_mount /mnt/media
+-o rw,async_read=false,use_ino,allow_other,func.getattr=newest,category.action=all,category.create=ff,cache.files=partial,dropcacheonclose=true
 KillMode=process
 Restart=on-failure
  
 [Install]
-WantedBy=default.target
+WantedBy=multi-user.target
