--- a/rclone/service_systemd/rclone.service
+++ b/rclone/service_systemd/rclone.service
@@ -9,9 +9,8 @@ Type=notify
 User=1000
 Group=1000
 
-# Rclone Arguments
 ExecStart=/usr/bin/rclone mount \
---uid=997 --gid=997 --umask=002 \
+--uid=1000 --gid=1000 --umask=002 \
 --log-level ERROR \
 --poll-interval 15s \
 --allow-other \
@@ -21,6 +20,7 @@ ExecStart=/usr/bin/rclone mount \
 --vfs-read-chunk-size 128M \
 --vfs-read-chunk-size-limit off \
 --vfs-cache-mode writes \
+--rc --rc-addr 127.0.0.1:5572 \
 YOUR_GOOGLE_DRIVE_REMOTE: /mnt/rclonedata/rclone_mount
 
 ExecStop=/usr/bin/fusermount -uz /mnt/rclonedata/rclone_mount
