--- a/rclone/service_systemd/mergerfs.service
+++ b/rclone/service_systemd/mergerfs.service
@@ -9,7 +9,7 @@ RequiresMountsFor=/mnt/rclonedata/rclone_mount
 [Service]
 Type=forking
 ExecStart=/usr/bin/mergerfs /mnt/rclonedata/rclone_upload:/mnt/rclonedata/rclone_mount /mnt/media
--o rw,async_read=false,use_ino,allow_other,func.getattr=newest,category.action=all,category.create=ff,cache.files=partial,dropcacheonclose=true
+-o rw,use_ino,allow_other,func.getattr=newest,category.action=all,category.create=ff,cache.files=auto-full
 KillMode=process
 Restart=on-failure
  
